# quartzy2elabftw

./: .env.dist  .gitignore  Dockerfile  README.md  deduplicate.md  deduplicate.sql  docker-compose.yml.dist  main.py  pyproject.toml  utils.py
.github/workflows/: push_to_registry.yml
dev/: inventory.py
